--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-    <h2>Gestión de Clientes</h2>
+    <h2>Gestión de Clientes DIC</h2>
 
     <!-- Botón para mostrar formulario de nuevo cliente -->
     <button class="btn btn-success mb-3" @click="mostrarFormulario = !mostrarFormulario">
